--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -36,7 +36,7 @@ footer {
     background-color: #c67605;
 }
 
-.product: {
+.product {
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
