started readme file

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,6 +13,7 @@ footer {
     padding-bottom: 40px;
     border-top: 1px solid #ededed;
     color: #A9A9A9;
+    text-align: center;
 }
 
 .icon-bar {
