--- a/templates/base.html
+++ b/templates/base.html
@@ -1,19 +1,20 @@
 {% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ecommerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
-    <link rel="stylesheet" href="{% static 'font-awesome/css/font-awesome.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    {% block head_js %}
-    {% endblock head_js %}
+    <script src="https://kit.fontawesome.com/ba2ae6a6ae.js" crossorigin="anonymous"></script>
+    {% block head_js %} {% endblock head_js %}
 </head>
+
 <body>
     <!-- Fixed masthead -->
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top">
@@ -25,17 +26,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Ecommerce</a>
+                <a class="navbar-brand" href="/">Bali Silver</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Bali Blog</a></li>
                     {% if user.is_authenticated %}
-                        <li><a href="{% url 'profile' %}">Profile</a></li>
-                        <li><a href="{% url 'logout' %}">Log Out</a></li>
-                    {%  else %}
-                        <li><a href="{% url 'registration' %}">Register</a></li>
-                        <li><a href="{% url 'login' %}">Log In</a></li>
-                    {% endif %}
+                    <li><a href="{% url 'profile' %}">Profile</a></li>
                     <li>
                         <a href="{% url 'view_cart' %}">
                             <i class="fa fa-shipping-cart"></i>Cart
@@ -44,32 +42,71 @@
                             {% endif %}
                         </a>
                     </li>
+                    <li><a href="{% url 'logout' %}">Log Out</a></li>
+                    {% else %}
+                    <li><a href="{% url 'registration' %}">Register</a></li>
+                    <li><a href="{% url 'login' %}">Log In</a></li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
     </nav>
     {% if messages %}
-        <div class="alert alert-success">
-            <div class="messages">
-                {% for message in messages %}
-                    {{ message }}
-                {% endfor %}
-            </div>
+    <div class="alert alert-success">
+        <div class="messages">
+            {% for message in messages %} {{ message }} {% endfor %}
         </div>
+    </div>
     {% endif %}
     <div class="container">
-        <div class="display">
-            <form action="{% url 'search' %}" method="get">
-                <input type="text" name="q">
-                <button type="search">Search</button>
-            </form>
+        <div class="row">
+            <div class="sidebar">
+                <div class="display">
+                    <form action="{% url 'search' %}" method="get">
+                        <input type="text" name="q">
+                        <button type="search">Search</button>
+                    </form>
+                </div>
+                <div class="side-menu">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Rings</a></li>
+                        <li><a href="#">Bracelettes</a></li>
+                        <li><a href="#">Earings</a></li>
+                        <li><a href="#">Necklaces</a></li>
+                        <li><a href="#">Harmony Bells</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-9">
+                {% block content %} {% endblock %}
+            </div>
         </div>
-        {% block content %} {% endblock %}
     </div>
     <footer>
         <div class="container">
-            <p>Made by Andrew Phillips</p>
-        </div>
+            <div class="row footer">
+                <div class="col-xs-hidden col-sm-4 col-md-6 col-lg-6">
+                    <p>Bali Silver</p>
+                    <p class='payment-icons'>
+                        <i class="fab fa-cc-visa fa-2x"></i>
+                        <i class="fab fa-cc-mastercard fa-2x"></i>
+                        <i class="fab fa-cc-diners fa-2x"></i>
+                        <i class="fab fa-cc-amex fa-2x"></i>
+                        <i class="fab fa-stripe fa-3x pay-icon"></i>
+                    </p>
+                    <p>Contact us at BaliSilver@example.com</p>
+                    <p class='payment-icons'>
+                        <i class="fab fa-facebook fa-2x"></i>
+                        <i class="fab fa-twitter fa-2x"></i>
+                        <i class="fab fa-google-plus-g fa-2x"></i>
+                        <i class="fab fa-pinterest fa-2x"></i>
+                        <i class="fab fa-youtube fa-2x"></i>
+                    </p>
+                    <p>Copywrite 2019 Andrew Phillips</p>
+                </div>
+            </div>
     </footer>
 </body>
+
 </html>
