--- a/templates/base.html
+++ b/templates/base.html
@@ -60,14 +60,14 @@
     {% endif %}
     <div class="container">
         <div class="row">
-            <div class="sidebar">
-                <div class="display">
+            <div class="sidebar col-sm-3">
+                <div class="display col">
                     <form action="{% url 'search' %}" method="get">
                         <input type="text" name="q">
                         <button type="search">Search</button>
                     </form>
                 </div>
-                <div class="side-menu">
+                <div class="side-menu col">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="#">Rings</a></li>
@@ -78,7 +78,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-9">
+            <div class="col-sm-9">
                 {% block content %} {% endblock %}
             </div>
         </div>
@@ -86,7 +86,7 @@
     <footer>
         <div class="container">
             <div class="row footer">
-                <div class="col-xs-hidden col-sm-4 col-md-6 col-lg-6">
+                <div class="col">
                     <p>Bali Silver</p>
                     <p class='payment-icons'>
                         <i class="fab fa-cc-visa fa-2x"></i>
