--- a/templates/base.html
+++ b/templates/base.html
@@ -27,24 +27,25 @@
                 <a class="navbar-brand" href="/">Bali Silver</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form navbar-left" action="{% url 'search' %}" method="get">
+                    <div class="form-group">
+                        <input type="text" class="form-control" name="q" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Search</button>
+                </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                    <form action="{% url 'search' %}" method="get" class="form-inline">
-                        <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                    </form>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Bali Jewellery
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Rings</a>
-                            <a class="dropdown-item" href="#">Bracelettes</a>
-                            <a class="dropdown-item" href="#">Earrings</a>
-                            <a class="dropdown-item" href="#">Necklaces</a>
-                            <a class="dropdown-item" href="#">Harmony Bells</a>
-                        </div>
+                    <li class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                            Bali Jewellery
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                            <li><a href="#">Rings</a></li>
+                            <li><a href="#">Bracelettes</a></li>
+                            <li><a href="#">Earrings</a></li>
+                            <li><a href="#">Necklaces</a></li>
+                            <li><a href="#">Harmony Bells</a></li>
+                        </ul> 
                     </li>
                     <li class="nav-item"><a href="#">Contact Us</a></li>
                     <li class="nav-item"><a href="{% url 'get_posts' %}">Bali Blog</a></li>
