--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ecommerce</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {% block head_js %} {% endblock head_js %}
 </head>
@@ -24,7 +25,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Bali Silver</a>
+                <a class="navbar-brand bali" href="/">Bali Silver</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <form class="navbar-form navbar-left" action="{% url 'search' %}" method="get">
@@ -34,7 +35,7 @@
                     <button type="submit" class="btn btn-default">Search</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
+                    <li class="dropdown jewelery-dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                             Bali Jewellery
                             <span class="caret"></span>
@@ -53,7 +54,7 @@
                     <li class="nav-item"><a href="{% url 'profile' %}">Profile</a></li>
                     <li class="nav-item">
                         <a href="{% url 'view_cart' %}">
-                            <i class="fa fa-shipping-cart"></i>Cart
+                            <i class="glyphicon glyphicon-shopping-cart"></i> Cart
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
                             {% endif %}
@@ -77,7 +78,7 @@
     {% endif %}
     <div class="container">
         <div class="row">
-            <div class="col-sm-9">
+            <div class="col-sm">
                 {% block content %} {% endblock %}
             </div>
         </div>
@@ -105,6 +106,7 @@
                     <p>Copywrite 2019 Andrew Phillips</p>
                 </div>
             </div>
+        </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
