added more products and url for different categories

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="#">Rings</a></li>
-                            <li><a href="#">Bracelettes</a></li>
+                            <li><a href="#">Bracelets</a></li>
                             <li><a href="#">Earrings</a></li>
                             <li><a href="#">Necklaces</a></li>
                             <li><a href="#">Harmony Bells</a></li>
