added view, url, form for contact page

--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                             <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#">Rings</a></li>
+                            <li><a href="{% url 'search' %}" name="q">Rings</a></li>
                             <li><a href="#">Bracelets</a></li>
                             <li><a href="#">Earrings</a></li>
                             <li><a href="#">Necklaces</a></li>
