--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -1,12 +1,17 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row">
+    <div class="col">
+        <a href="{% url 'new_post' %}" class="btn btn-default newPost">Add a post</a>
+    </div>
+</div>
     {% for post in posts %}
         <div class="row">
             <div class="col-md-2 col-sm-3 text-center">
                 <a class="story-img" href="#">
-                    <img src="/media/img/profile.jpg" class="img-circle">
+                    <img src="/media/img/profile_2.jpg" class="img-circle">
                 </a>
-                <p><span class="boldtext">Author:</span>User</p>
+                <p><span class="boldtext">Author:</span>Andy</p>
             </div>
             <div class="col-md-10 col-sm-9">
                 <h3>{{ post.title }}</h3>
