--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -5,7 +5,7 @@ form {
 body {
     font-family: Arial;
     padding-top: 100px;
-    background-color: pink;
+    background-color: #faf1f0;
 }
 
 footer {
@@ -13,8 +13,9 @@ footer {
     padding-top: 40px;
     padding-bottom: 40px;
     border-top: 1px solid #ededed;
-    color: #A9A9A9;
+    background-color: #f495b8;
     text-align: center;
+    color: black;
 }
 
 .side-menu {
@@ -66,14 +67,19 @@ caption p {
     margin-top: 30px;
 }
 
+.row {
+    margin-left: 0;
+    margin-right: 0;
+}
+
 .panel-default {
     border-color: transparent;
     padding: 0 10px;
+    box-shadow: 5px 10px 18px #888888;
 }
 
 .panel-body {
     min-height: 100%;
-    border: 1px solid #ddd;
 }
 
 .product-description {
@@ -83,3 +89,38 @@ caption p {
 .jewelery-dropdown {
     margin-top: 5px;
 }
+
+.story-img {
+    margin-top: 25%;
+    display: block;
+}
+
+.img-circle{
+    width:100px;
+    height: 100px; 
+}
+
+.img-blogpost{
+    height: 300px;
+    width: auto;
+}
+
+.img-container img {
+    min-width: 280px;
+    min-height: 180px;
+    max-width: 380px;
+    max-height: 280px;
+}
+
+.newPost {
+    margin-left: 10px;
+}
+
+.nav-style {
+    background-color: #b6f038;
+}
+
+.input-group {
+    width: 100px;
+}
+
