added pound symbol to products, removed option to add to cart unless logged in

--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -7,8 +7,8 @@
 <h2>Contact Us</h2>
 <form method="post">
     {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit" />
+    {{ form | as_bootstrap }}
+    <input class="btn btn-default" type="submit" value="Submit" />
 </form>
 
 {% endblock %}
