--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,9 @@
                     <button type="submit" class="btn btn-default">Search</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown jewelery-dropdown">
+                    <li class="nav-item"><a href="#">About Us</a></li>
+                    {% if user.is_authenticated %}
+                    <!-- <li class="dropdown jewelery-dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                             Category
                             <span class="caret"></span>
@@ -46,11 +48,10 @@
                             <li><a href="#">Earrings</a></li>
                             <li><a href="#">Necklaces</a></li>
                             <li><a href="#">Harmony Bells</a></li>
-                        </ul> 
+                        </ul> --> 
                     </li>
                     <li class="nav-item"><a href="{% url 'contact' %}">Contact Us</a></li>
                     <li class="nav-item"><a href="{% url 'get_posts' %}">Bali Blog</a></li>
-                    {% if user.is_authenticated %}
                     <li class="nav-item"><a href="{% url 'profile' %}">Profile</a></li>
                     <li class="nav-item">
                         <a href="{% url 'view_cart' %}">
