--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -5,5 +5,28 @@
 {% block page_heading %}{{ user }}'s Profile{% endblock %}
 
 {% block content %}
-<p>{{ profile.email }}</p>
+<div class="row">
+    <div class="col">
+        <a href="#" class="btn btn-default newPost">Edit Profile</a>
+    </div>
+</div>
+<hr>
+<div class="row">
+    <div class="col-md-2 col-sm-3 text-center">
+        <a class="story-img" href="#">
+            <img src="/media/img/profile_2.jpg" class="img-circle">
+        </a>
+        <p>Andy</p>
+    </div>
+    <div class="col-md-10 col-sm-9">
+        <div class="row">
+            <div class="col-xs-9">
+                <p>{{ profile.email }}</p>
+            </div>
+        </div>
+    </div>
+    
+</div>
+<hr>
+
 {% endblock %}
