--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -13,7 +13,7 @@
             {% endif %}
             <h3>{{ post.title }}</h3>
             <div class="row">
-                <div class="col-xs-9">
+                <div class="col-xs-9 detail">
                     <p>{{ post.content }}</p>
                     <p><span class="boldtext">Published on:</span> {{ post.published_date }} </p>
                     <p><span class="boldtext">Views:</span> {{post.views}}</p>
