--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -9,8 +9,8 @@
 
                 <h3>{{ product.name }}</h3>
                 <p class="product-description">{{ product.description }}</p>
-                <p>{{ product.price }}</p>
-
+                <p class="glyphicon glyphicon-gbp">{{ product.price }}</p>
+                {% if user.is_authenticated %}
                 <form method="post" action="{% url 'add_to_cart' product.id %}">
                     {% csrf_token %}
                     <div class="input-group">
@@ -20,6 +20,7 @@
                         </span>
                     </div>
                 </form>
+                {% endif %}
             </div>
         </div>
     {% endfor %}
