--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
                     <button type="submit" class="btn btn-default">Search</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item"><a href="#">About Us</a></li>
+                    <li class="nav-item"><a href="{% url 'about' %}">About Us</a></li>
                     {% if user.is_authenticated %}
                     <!-- <li class="dropdown jewelery-dropdown">
                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
