--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="row">
     <div class="col">
-        <a href="#" class="btn btn-default newPost">Edit Profile</a>
+        <a href="#" class="btn btn-default newPost">Edit Profile</a><a href="{% url 'edit_profile' profile.id %}" class="btn btn-default">Edit Profile</a>
     </div>
 </div>
 <hr>
