--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -3,7 +3,7 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-<div class="row row-flex">
+<div class="row row-flex min_height">
     {% for item in cart_items %}
     
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
@@ -13,7 +13,7 @@
         <div class="caption">
             <h3>{{ item.product.name }}</h3>
             <p class="product-description">{{ item.product.description }}</p>
-            <p>{{ item.product.price }}</p>
+            <p class="glyphicon glyphicon-gbp">{{ item.product.price }}</p>
             <p>
                 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
@@ -26,7 +26,7 @@
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
                 </form>
             </p>
         </div>
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
     <p>Total</p>
-    <p><span class="glyphicon glyphicon-gbh" aria-hidden="true"></span>{{ total }}</p>
+    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
     <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
