added msg to search results, changed styling of buttons, added page to show when a contact form is submitted

--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -7,7 +7,15 @@
 <div class="container min_height">
     <div class="row">
         <div class="col">
-            <h1>We import Balinese Silver</h1>
+            <h1>About Us</h1>
+            <hr>
+            <p>
+                Bali Silver is a dedicated online jewellery store specialising in handmade Balinese silver. 
+                Since its launch in 2020, the site has seen grown into the UK's leading retailers of Harmony Bells.
+            </p>
+            <p>
+                We are an ethical importer with providing the best possible price for the local Balinese silver jewelery makers.
+            </p>
         </div>
     </div>
 </div>
