--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -22,7 +22,7 @@
                         <label for="exampleInputAmount" class="sr-only">New Qty</label>
                         <div class="input-group">
                             <div class="input-group-addon">Qty</div>
-                            <input name="quantity" type="number" min="0" max="999" class="form-control">
+                            <input name="quantity" type="number" min="0" max="999" class="form-control" value="1" placeholder="1">
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
