--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -8,7 +8,7 @@
 <form method="post">
     {% csrf_token %}
     {{ form | as_bootstrap }}
-    <input class="btn btn-default" type="submit" value="Submit" />
+    <input class="btn btn-primary" type="submit" value="Submit" />
 </form>
 
 {% endblock %}
