--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                     <div class="form-group">
                         <input type="text" class="form-control" name="q" placeholder="Search">
                     </div>
-                    <button type="submit" class="btn btn-default">Search</button>
+                    <button type="submit" class="btn btn-primary">Search</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="{% url 'about' %}">About Us</a></li>
