--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -2,6 +2,7 @@
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
 
+<!-- activates javascript for stripe -->
 {% block head_js %}
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 <script type="text/javascript">
@@ -13,6 +14,9 @@
 {% endblock %}
 
 {% block content %}
+<h1>Checkout</h1>
+<hr>
+<!-- gets cart items -->
 <div class="row row-flex">
     {% for item in cart_items %}
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
@@ -29,11 +33,12 @@
         </div>
     {% endfor %}
 </div>
+<!-- calls up total price of items in cart -->
 <div class="row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
 </div>
-
+<!-- calls up form for payment details -->
 <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
     <legend>Payment Details</legend>
 
