--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -3,7 +3,7 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-
+<!-- template for info about website -->
 <div class="container min_height">
     <div class="row">
         <div class="col">
