--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}Setting New password{% endblock %}
-
+<!-- from to reset password with error msg if unsuccessful-->
 {% block content %}
     {% if validlink %}
         <p>Please enter your new password twice.<br />
