--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -2,16 +2,15 @@
 
 {% load bootstrap_tags %}
 
-{% block page_title %}Registration Page{% endblock %} 
-
-{% block page_heading %}User Registration{% endblock %} 
-
 {% block content %}
+<h1>Registration Page</h1>
+<hr>
+<!-- option to skip registration if user has login details -->
 <p>If you already have an account, you can <a href="{% url 'login' %}">sign in</a></p>
-
+<!-- calls registration form from forms.py -->
 <form method="POST">
     {% csrf_token %} 
     {{ registration_form | as_bootstrap  }}
-    <button type="submit" class="btn btn-default">Register</button>
+    <button type="submit" class="btn btn-primary">Register</button>
 </form>
 {% endblock %}
