--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -2,20 +2,21 @@
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
 
+<!-- adds cart template to base -->
 {% block content %}
+<h1>Your Cart</h1>
+<hr>
 <div class="row row-flex min_height">
+    <!-- shows product panels for items in cart -->
     {% for item in cart_items %}
-    
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-display">
-        
         <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ item.product.image }}')"></div>
-        
         <div class="caption">
             <h3>{{ item.product.name }}</h3>
             <p class="product-description">{{ item.product.description }}</p>
             <p class="glyphicon glyphicon-gbp">{{ item.product.price }}</p>
             <p>
-                
+            <!-- allows user to edit cart item --> 
                 <form class="form-inline" method="post" action="{% url 'adjust_cart' item.id %}">
                     {% csrf_token %}
                     <div class="form-group">
@@ -33,6 +34,7 @@
     </div>
     {% endfor %}
 </div>
+<!-- moves user to checkout page to process payment -->
 <div class="row">
     <p>Total</p>
     <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
