--- a/contact/templates/message.html
+++ b/contact/templates/message.html
@@ -3,7 +3,7 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-
+<!-- Calls up message sent page -->
 <div class="container min_height">
     <div class="row">
         <div class="col">
