--- a/posts/templates/blogpostform.html
+++ b/posts/templates/blogpostform.html
@@ -2,7 +2,7 @@
 {% load bootstrap_tags %}
 
 {% block content %}
-
+<!-- Template with form from forms.py to create a new post to blog -->
     <h1>New Post</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
