--- a/posts/templates/blogposts.html
+++ b/posts/templates/blogposts.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<!-- Template to show all abbreviated blogposts -->
+<h1>Bali Blog</h1>
+<hr>
 <div class="row">
     <div class="col">
-        <a href="{% url 'new_post' %}" class="btn btn-default newPost">Add a post</a>
+        <a href="{% url 'new_post' %}" class="btn btn-primary newPost">Add a post</a>
     </div>
 </div>
     {% for post in posts %}
@@ -18,7 +21,7 @@
                 <div class="row">
                     <div class="col-xs-9">
                         <p>{{ post.content|truncatewords:30 }}</p>
-                        <p><a href="{% url 'post_detail' post.id %}" class="btn btn-default">Read more</a></p>
+                        <p><a href="{% url 'post_detail' post.id %}" class="btn btn-primary">Read more</a></p>
                         <p><span class="boldtext">Published on:</span> {{ post.published_date }} </p>
                         <p><span class="boldtext">Views:</span> {{post.views}}</p>
                         <p><span class="boldtext">Tag:</span> {{ post.tag }}</p>
