--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- template to show all products in panels -->
+    <h1>Our Jewellery</h1>
+    <hr>
 <div class="row row-flex min_height">
     {% for product in products %}
         <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
