--- a/templates/base.html
+++ b/templates/base.html
@@ -15,40 +15,33 @@
 </head>
 
 <body>
-    <!-- Fixed masthead -->
+    <!-- Fixed navbar -->
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top justify-content-between">
         <div class="container-fluid nav-style">
             <div class="navbar-header">
+                <!-- collapse navbar on smaller screens -->
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <!-- Brand heading -->
                 <a class="navbar-brand bali" href="/">Bali Silver</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
+                <!-- Search bar -->
                 <form class="navbar-form navbar-left" action="{% url 'search' %}" method="get">
                     <div class="form-group">
                         <input type="text" class="form-control" name="q" placeholder="Search">
                     </div>
                     <button type="submit" class="btn btn-primary">Search</button>
                 </form>
+                <!-- Other navigation buttons -->
                 <ul class="nav navbar-nav navbar-right">
                     <li class="nav-item"><a href="{% url 'about' %}">About Us</a></li>
+                    <!-- navigation buttons available only when user is authorised -->
                     {% if user.is_authenticated %}
-                    <!-- <li class="dropdown jewelery-dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            Category
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                            <li><a href="#" name="q">Rings</a></li>
-                            <li><a href="#">Bracelets</a></li>
-                            <li><a href="#">Earrings</a></li>
-                            <li><a href="#">Necklaces</a></li>
-                            <li><a href="#">Harmony Bells</a></li>
-                        </ul> --> 
                     </li>
                     <li class="nav-item"><a href="{% url 'contact' %}">Contact Us</a></li>
                     <li class="nav-item"><a href="{% url 'get_posts' %}">Bali Blog</a></li>
@@ -56,6 +49,7 @@
                     <li class="nav-item">
                         <a href="{% url 'view_cart' %}">
                             <i class="glyphicon glyphicon-shopping-cart"></i> Cart
+                            <!-- shows count on items in cart -->
                             {% if product_count > 0 %}
                             <label class="badge badge-warning">{{ product_count }}</label>
                             {% endif %}
@@ -63,6 +57,7 @@
                     </li>
                     <li class="nav-item"><a href="{% url 'logout' %}">Log Out</a></li>
                     {% else %}
+                    <!-- navbar buttons shown all the time-->
                     <li class="nav-item"><a href="{% url 'registration' %}">Register</a></li>
                     <li class="nav-item"><a href="{% url 'login' %}">Log In</a></li>
                     {% endif %}
@@ -70,6 +65,7 @@
             </div>
         </div>
     </nav>
+    <!-- shows messages if needed -->
     {% if messages %}
     <div class="alert alert-success">
         <div class="messages">
@@ -77,6 +73,7 @@
         </div>
     </div>
     {% endif %}
+    <!-- other templates for nav buttons shown in this container -->
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -84,25 +81,26 @@
             </div>
         </div>
     </div>
-    <footer>
+    <!-- Fixed footer at bottom of page -->
+    <footer class="fixed-bottom">
         <div class="container">
             <div class="row footer">
                 <div class="col">
-                    <p>Bali Silver</p>
+                    <p><h3>Bali Silver</h3></p>
                     <p class='payment-icons'>
-                        <i class="fab fa-cc-visa fa-2x"></i>
-                        <i class="fab fa-cc-mastercard fa-2x"></i>
-                        <i class="fab fa-cc-diners fa-2x"></i>
-                        <i class="fab fa-cc-amex fa-2x"></i>
-                        <i class="fab fa-stripe fa-3x pay-icon"></i>
+                        <a href="https://www.visa.com"><i class="fab fa-cc-visa fa-2x"></i></a>
+                        <a href="https://www.mastercard.com"><i class="fab fa-cc-mastercard fa-2x"></i></a>
+                        <a href="https://www.diners.com"><i class="fab fa-cc-diners fa-2x"></i></a>
+                        <a href="https://www.americanexpress.com"><i class="fab fa-cc-amex fa-2x"></i></a>
+                        <a href="https://www.stripe.com"><i class="fab fa-stripe fa-3x pay-icon"></i></a>
                     </p>
                     <p>Contact us at BaliSilver@example.com</p>
-                    <p class='payment-icons'>
-                        <i class="fab fa-facebook fa-2x"></i>
-                        <i class="fab fa-twitter fa-2x"></i>
-                        <i class="fab fa-google-plus-g fa-2x"></i>
-                        <i class="fab fa-pinterest fa-2x"></i>
-                        <i class="fab fa-youtube fa-2x"></i>
+                    <p class='SoMe-icons'>
+                        <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
+                        <a href="https://www.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
+                        <a href="https://www.google.com"><i class="fab fa-google-plus-g fa-2x"></i></a>
+                        <a href="https://www.pinterest.com"><i class="fab fa-pinterest fa-2x"></i></a>
+                        <a href="https://www.youtube.com"><i class="fab fa-youtube fa-2x"></i></a>
                     </p>
                     <p>Copywrite 2019 Andrew Phillips</p>
                 </div>
