--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}Password reset complete{% endblock %}
-
+<!-- template to show once password reset-->
 {% block content %}
 <p>Your password has been set.  You may go ahead and log in now.</p>
 <p><a href="{{ login_url }}">Log in</a></p>
