--- a/home/templates/about.html
+++ b/home/templates/about.html
@@ -1,14 +1,14 @@
 {% extends 'base.html' %}
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
+{% block page_title %}About Bali Silver{% endblock %}
 
+{% block page_heading %}About Bali Silver{% endblock %}
 {% block content %}
 <!-- template for info about website -->
 <div class="container min_height">
     <div class="row">
         <div class="col">
-            <h1>About Us</h1>
-            <hr>
             <p>
                 Bali Silver is a dedicated online jewellery store specialising in handmade Balinese silver. 
                 Since its launch in 2020, the site has seen grown into the UK's leading retailers of Harmony Bells.
