--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} 
 {% load bootstrap_tags %}
 
+{% block page_title %}Login Page{% endblock %}
+
+{% block page_heading %}Login Page{% endblock %}
 
 {% block content %}
-<h1>Login Page</h1>
-<hr>
 <!-- gets form from forms.py to login -->
 <form method="POST">
     {% csrf_token %} {{ login_form | as_bootstrap }}
