--- a/accounts/templates/registration.html
+++ b/accounts/templates/registration.html
@@ -1,10 +1,12 @@
 {% extends 'base.html' %} 
-
 {% load bootstrap_tags %}
 
+{% block page_title %}Registration Page{% endblock %}
+
+{% block page_heading %}Registration Page{% endblock %}
+
 {% block content %}
-<h1>Registration Page</h1>
-<hr>
+
 <!-- option to skip registration if user has login details -->
 <p>If you already have an account, you can <a href="{% url 'login' %}">sign in</a></p>
 <!-- calls registration form from forms.py -->
