--- a/posts/templates/blogpostform.html
+++ b/posts/templates/blogpostform.html
@@ -1,9 +1,10 @@
 {% extends "base.html" %}
 {% load bootstrap_tags %}
+{% block page_title %}New Post{% endblock %}
 
+{% block page_heading %}New post from {{ user }}{% endblock %}
 {% block content %}
 <!-- Template with form from forms.py to create a new post to blog -->
-    <h1>New Post</h1>
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
         {{ form | as_bootstrap }}
