--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -1,14 +1,16 @@
 {% extends 'base.html' %}
+
+{% block page_title %}Bali Blog{% endblock %}
+{% block page_heading %}Bali Blog{% endblock %}
+
 {% block content %}
 <!-- shows template of a single full blog post -->
-<h1>Bali Blog</h1>
-<hr>
     <div class="row">
         <div class="col-md-2 col-sm-3 text-center">
             <a class="story-img" href="#">
                 <img src="/media/img/profile_2.jpg" class="img-circle">
             </a>
-            <p><span class="boldtext">Author:</span>User</p>
+            <p><span class="boldtext">Author:</span>{{ user }}</p>
         </div>
         <div class="col-sm-10 col-md-9">
             {% if post.image %}
