--- a/templates/base.html
+++ b/templates/base.html
@@ -7,11 +7,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ecommerce</title>
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.7/cerulean/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     {% block head_js %} {% endblock head_js %}
+    <title>{% block page_title %}{% endblock %}</title>
 </head>
 
 <body>
@@ -77,6 +78,8 @@
     <div class="container">
         <div class="row">
             <div class="col-sm">
+                <h1>{% block page_heading %}{% endblock %}</h1>
+                <hr>
                 {% block content %} {% endblock %}
             </div>
         </div>
