--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -10,6 +10,6 @@ Your username, in case you've forgotten: {{ user.username }}
 
 Thanks for using our site!
 
-The {{ # }} team.
+The Bali Silver team.
 
 {% endautoescape %}
