adding forms, models and views for profiles

--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bootstrap_tags %}
 {% block title %}Password reset complete{% endblock %}
 <!-- template to show once password reset-->
 {% block content %}
