--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load bootstrap_tags %}
 {% block title %}Setting New password{% endblock %}
 <!-- from to reset password with error msg if unsuccessful-->
 {% block content %}
