--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% load bootstrap_tags %}
 {% block title %}Password reset successful{% endblock %}
 
 {% block content %}
