--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -1,28 +1,37 @@
 {% extends 'base.html' %}
+{% load bootstrap_tags %}
 
 {% block page_title %}{{ user }}'s Profile{% endblock %}
-
 {% block page_heading %}{{ user }}'s Profile{% endblock %}
 
 {% block content %}
 <!-- option to edit the users profile -->
 <div class="row">
     <div class="col">
-        <a href="#" class="btn btn-primary newPost">Edit Profile</a><a href="{% url 'edit_profile' profile.id %}" class="btn btn-primary">Edit Profile</a>
+        <a href="{% url 'edit_profile' user.id %}" class="btn btn-primary newPost">Edit Profile</a>
     </div>
 </div>
 <!-- calls up users details -->
 <div class="row">
     <div class="col-md-2 col-sm-3 text-center">
         <a class="story-img" href="#">
-            <img src="/media/img/profile_2.jpg" class="img-circle">
+            {% if user.image %}    
+                <img class ="img-blogpost" src="/media/{{ user.image }}">
+            {% endif %}    
         </a>
-        <p>{{ user }}</p>
+        <p>{{ user.name }}</p>
     </div>
     <div class="col-md-10 col-sm-9">
+        {% if user.image %}
+            <img class ="img-blogpost" src="/media/{{ user.image }}">
+        {% endif %}
+        <h3>{{ user.name }}</h3>
         <div class="row">
             <div class="col-xs-9">
                 <p>{{ profile.email }}</p>
+                <p>{{ user.about_me }}</p>
+                <p>{{ user.nationality }}</p>
+                <p>{{ user.created_date }}</p>
             </div>
         </div>
     </div>
