--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -30,7 +30,8 @@
                             <div class="input-group-addon">{{item.quantity}}</div>
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                    <button type="submit" class="btn btn-success cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
+                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Empty</button>
                 </form>
             </p>
         </div>
@@ -39,8 +40,8 @@
 </div>
 <!-- moves user to checkout page to process payment -->
 <div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
+    <p><h3>Total</h3></p>
+    <p><h2 class="text-danger"><span class="glyphicon text-danger glyphicon-gbp" aria-hidden="true"></span>{{ total }}</h2></p>
     <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
