--- a/checkout/templates/confirmation.html
+++ b/checkout/templates/confirmation.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% load static from staticfiles %}
 {% load bootstrap_tags %}
-{% block page_title %}Contact Us{% endblock %}
+{% block page_title %}Confirmation{% endblock %}
 
-{% block page_heading %}We are listening!{% endblock %}
+{% block page_heading %}Purchase Confirmation{% endblock %}
 {% block content %}
 <!-- Calls up message sent page -->
 <div class="container min_height">
     <div class="row">
         <div class="col">
             <p>
-                Your message has been sent and we will get back to as soon as possible. 
+                Congratulations your purchase was successful. You should recieve a confirmation email shortly. 
             </p>
         </div>
     </div>
