--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,5 +1,49 @@
 {% extends 'base.html' %}
+{% load static from staticfiles %}
+{% load bootstrap_tags %}
+{% block page_title %}Bali Silver{% endblock %}
 
+{% block page_heading %}Bali Silver{% endblock %}
 {% block content %}
-
+<!-- template for the home page -->
+<div class="container min_height">
+    <div class="row">
+        <div class="col">
+            <div id="balicarousel" class="carousel slide" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#balicarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#balicarousel" data-slide-to="1"></li>
+                    <li data-target="#balicarousel" data-slide-to="2"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img class="d-block w-100" src="media/images/Bali_Bracelet.jpg" alt="First slide">
+                    </div>
+                    <div class="item">
+                        <img class="d-block w-100" src="media/images/Bali_Bracelet_silver.jpg" alt="Second slide">
+                    </div>
+                    <div class="item">
+                        <img class="d-block w-100" src="media/images/harmonybell.jpg" alt="Third slide">
+                    </div>
+                </div>
+                <!-- Left and right controls -->
+                <a class="left carousel-control" href="#balicarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="right carousel-control" href="#balicarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+    <script>
+    $(document).ready(function(){
+        $('.carousel').carousel();
+        });
+    </script>
 {% endblock %}
