adding view to remove an item from cart

--- a/checkout/templates/checkout.html
+++ b/checkout/templates/checkout.html
@@ -36,8 +36,8 @@
 </div>
 <!-- calls up total price of items in cart -->
 <div class="row">
-    <p>Total</p>
-    <p><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</p>
+    <p><h3>Total</h3></p>
+    <p><h2><span class="glyphicon glyphicon-gbp" aria-hidden="true"></span>{{ total }}</h2></p>
 </div>
 <!-- calls up form for payment details -->
 <form role="form" method="post" id="payment-form" action="{% url 'checkout' %}">
