--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -15,17 +15,37 @@
                     <li data-target="#balicarousel" data-slide-to="0" class="active"></li>
                     <li data-target="#balicarousel" data-slide-to="1"></li>
                     <li data-target="#balicarousel" data-slide-to="2"></li>
+                    <li data-target="#balicarousel" data-slide-to="3"></li>
                 </ol>
                 <!-- Wrapper for slides -->
                 <div class="carousel-inner">
                     <div class="item active">
-                        <img class="d-block w-100" src="media/images/Bali_Bracelet.jpg" alt="First slide">
+                        <img class="d-block w-100" src="media/images/Bali_Bracelet.jpg" alt="Bracelet">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Silver Bracelets</h1>
+                            <p>Hand Crafted Silver Bracelets</p>
+                        </div>
                     </div>
                     <div class="item">
-                        <img class="d-block w-100" src="media/images/Bali_Bracelet_silver.jpg" alt="Second slide">
+                        <img class="d-block w-100" src="media/images/Bali_silver_Necklace.jpg" alt="Necklace">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h1>Silver Necklaces</h1>
+                            <p>Silver Necklaces from Balinese craftsmen</p>
+                        </div>    
                     </div>
                     <div class="item">
-                        <img class="d-block w-100" src="media/images/harmonybell.jpg" alt="Third slide">
+                        <img class="d-block w-100" src="media/images/harmonybell2_X2uujgA.jpg" alt="Harmony Bell">
+                        <div class="carousel-caption d-none d-md-block">   
+                            <h1>Harmony Bells</h1>
+                            <p>Majestic Harmony Bells by skilled silversmiths</p>
+                        </div>    
+                    </div>
+                    <div class="item">
+                        <img class="d-block w-100" src="media/images/Silver_earring.jpg" alt="Earrings">
+                        <div class="carousel-caption d-none d-md-block">    
+                            <h1>Silver Earrings</h1>
+                            <p>Crafted by Balinese silversmiths</p>
+                        </div>    
                     </div>
                 </div>
                 <!-- Left and right controls -->
