--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -41,7 +41,7 @@
 <!-- moves user to checkout page to process payment -->
 <div class="row">
     <p><h3>Total</h3></p>
-    <p><h2 class="text-danger"><span class="glyphicon text-danger glyphicon-gbp" aria-hidden="true"></span>{{ total }}</h2></p>
+    <p><h2 class="text-primary"><span class="glyphicon text-primary glyphicon-gbp" aria-hidden="true"></span>{{ total }}</h2></p>
     <a href="{% url 'checkout' %}" class="btn btn-success" role="button"><span class="glyphicon glyphicon-ok-sign" aria-hidden="true"></span>Checkout</a>
 </div>
 
