--- a/checkout/templates/confirmation.html
+++ b/checkout/templates/confirmation.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col">
             <p>
-                Congratulations your purchase was successful. You should recieve a confirmation email shortly. 
+                Congratulations, your purchase was successful. You will recieve a confirmation email shortly. 
             </p>
         </div>
     </div>
