--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-masthead navbar-default navbar-fixed-top justify-content-between">
-        <div class="container-fluid nav-style navbar-dark bg-success">
+        <div class="container-fluid nav-style navbar-dark">
             <div class="navbar-header">
                 <!-- collapse navbar on smaller screens -->
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -43,7 +43,7 @@
                 </form>
                 <!-- Other navigation buttons -->
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="nav-item"><a href="{% url 'products' %}">Our Jewellery</a></li>
+                    <li class="nav-item"><a text-primary href="{% url 'products' %}">Our Jewellery</a></li>
                     <li class="nav-item"><a href="{% url 'about' %}">About Us</a></li>
                     <!-- navigation buttons available only when user is authorised -->
                     {% if user.is_authenticated %}
@@ -91,25 +91,25 @@
     <!-- Fixed footer at bottom of page -->
     <footer class="fixed-bottom text">
         <div class="container">
-            <div class="row footer">
+            <div class="row footer footer_text">
                 <div class="col">
-                    <p class="bali text-primary">Bali Silver</p>
-                    <p class='payment-icons'>
+                    <p class="footer_text">Bali Silver</p>
+                    <p class='payment-icons footer_text'>
                         <a href="https://www.visa.com"><i class="fab fa-cc-visa fa-2x"></i></a>
                         <a href="https://www.mastercard.com"><i class="fab fa-cc-mastercard fa-2x"></i></a>
                         <a href="https://www.diners.com"><i class="fab fa-cc-diners fa-2x"></i></a>
                         <a href="https://www.americanexpress.com"><i class="fab fa-cc-amex fa-2x"></i></a>
                         <a href="https://www.stripe.com"><i class="fab fa-stripe fa-3x pay-icon"></i></a>
                     </p>
-                    <p class="bali text-primary">Contact us at BaliSilver@example.com</p>
-                    <p class='SoMe-icons'>
+                    <p class="footer_text">Contact us at BaliSilver@example.com</p>
+                    <p class='SoMe-icons footer_text'>
                         <a href="https://www.facebook.com"><i class="fab fa-facebook fa-2x"></i></a>
                         <a href="https://www.twitter.com"><i class="fab fa-twitter fa-2x"></i></a>
                         <a href="https://www.google.com"><i class="fab fa-google-plus-g fa-2x"></i></a>
                         <a href="https://www.pinterest.com"><i class="fab fa-pinterest fa-2x"></i></a>
                         <a href="https://www.youtube.com"><i class="fab fa-youtube fa-2x"></i></a>
                     </p>
-                    <p class="bali text-primary">Copywrite 2019 Andrew Phillips</p>
+                    <p class="footer_text">Copywrite 2019 Andrew Phillips</p>
                 </div>
             </div>
         </div>
