adding views to link user and profile

--- a/posts/templates/postdetail.html
+++ b/posts/templates/postdetail.html
@@ -24,7 +24,7 @@
                     <p><span class="boldtext">Views:</span> {{post.views}}</p>
                     <p><span class="boldtext">Tag:</span> {{ post.tag }}</p>
                     <a href="{% url 'get_posts' %}" class="btn btn-primary">Back to Blog</a>
-                    <a href="{% url 'edit_post' post.id %}" class="btn btn-primary">Edit Post</a>
+                    <!-- <a href="{% url 'edit_post' post.id %}" class="btn btn-primary">Edit Post</a> -->
                     <hr>
                 </div>
             </div>
