--- a/accounts/templates/login.html
+++ b/accounts/templates/login.html
@@ -12,5 +12,5 @@
     <button type="submit" class="btn btn-primary">Login</button>
 </form>
 <!-- calls url to reset users password -->
-<p><a href="{% url 'password_reset' %}">Reset Password</a></p>
+<p><a href="{% url 'password_reset' %}">Forgot Password</a></p>
 {% endblock %}
