--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -31,7 +31,7 @@
                         </div>
                     </div>
                     <button type="submit" class="btn btn-success cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Amend</button>
-                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Empty</button>
+                    <button type="submit" class="btn btn-primary cart_button"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Delete</button>
                 </form>
             </p>
         </div>
