adding profile views

--- a/products/templates/products.html
+++ b/products/templates/products.html
@@ -8,8 +8,8 @@
 <!-- template to show all products in panels -->
 <div class="row row-flex min_height product-page">
     {% for product in products %}
-        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
-            <div class="panel-body">
+        <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display">
+            <div class="panel-body panel panel-default">
                 <div class="product" style="background-image: url('{{ MEDIA_URL }}{{ product.image }}')"></div>
 
                 <h3>{{ product.name }}</h3>
