--- a/accounts/templates/profile.html
+++ b/accounts/templates/profile.html
@@ -16,19 +16,19 @@
     <div class="col-md-2 col-sm-3 text-center">
         <a class="story-img" href="#">
             {% if user.image %}    
-                <img class ="img-blogpost" src="/media/{{ user.image }}">
+                <img class ="img-blogpost" src="/media/{{ user.profile.image.url }}">
             {% endif %}    
         </a>
         <p>{{ user.name }}</p>
     </div>
     <div class="col-md-10 col-sm-9">
         {% if user.image %}
-            <img class ="img-blogpost" src="/media/{{ user.image }}">
+            <img class ="img-blogpost" src="/media/{{ user.profile.image.url }}">
         {% endif %}
         <h3>{{ user.name }}</h3>
         <div class="row">
             <div class="col-xs-9">
-                <p>{{ profile.email }}</p>
+                <p>{{ user.email }}</p>
                 <p>{{ user.about_me }}</p>
                 <p>{{ user.nationality }}</p>
                 <p>{{ user.created_date }}</p>
